<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarcoPolo</string>
    <string name="hello_world">Device Name : </string>
    <string name="action_settings">Settings</string>
    <string name="new_device">+ Add new device</string>
    <string name="volume_control">Volume control </string>
    <string name="category">Category : </string>
    <string name="handheld_devices">Handheld devices</string>
    <string name="remotes">Remotes</string>
    <string name="accessories">Accessories</string>
    <string name="keys">Keys</string>
    <string name="wallets">Wallets</string>
    <string name="others">Others</string>
    <string name="done">Done</string>
    <string name="marco_polo_">Marco Polo !!!!</string>
    <string name="list_of_devices">List of devices</string>
    <string name="remote">Remote</string>
    <string name="add_name">Add a name</string>
    <string name="title_activity_display_message">My Message</string>

</resources>
