<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="isu.tej4m1.finder.MainActivity" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="423dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="isu.tej4m1.finder.MainActivity" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/new_device"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText1"
                android:layout_alignParentLeft="true"
                android:text="@string/hello_world"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignLeft="@+id/editText1"
                android:layout_alignParentRight="true"
                android:text="@string/handheld_devices" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox2"
                android:layout_below="@+id/checkBox2"
                android:text="@string/remotes" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox3"
                android:layout_below="@+id/checkBox3"
                android:text="@string/accessories" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox4"
                android:layout_below="@+id/checkBox4"
                android:text="@string/keys" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox5"
                android:layout_below="@+id/checkBox5"
                android:text="@string/others" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="22dp"
                android:text="@string/category"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/seekBar1"
                android:layout_below="@+id/checkBox6"
                android:layout_marginTop="20dp"
                android:text="@string/volume_control"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox1"
                android:layout_below="@+id/textView4"
                android:text="@string/wallets" />
            
            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="14dp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seekBar1"
                android:layout_toRightOf="@+id/textView1"
                android:text="@string/done" />

        </RelativeLayout>
    </ScrollView>

</GridLayout>