<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="isu.tej4m1.marcopolo.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/list_of_devices"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/wrap1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="36dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="38dp"
            android:text="@string/remote"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="97dp"
            android:layout_height="87dp"
            android:contentDescription="@string/remote"
            android:src="@drawable/remote" />
    </LinearLayout>

  <LinearLayout
      android:id="@+id/keys"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/others"
      android:layout_below="@+id/wrap1" >

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="42dp"
          android:layout_marginTop="38dp"
          android:text="@string/keys"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="97dp"
          android:layout_height="87dp"
          android:contentDescription="@string/keys"
          android:src="@drawable/keys" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/others"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/wrap1"
      android:layout_below="@+id/keys" >

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="42dp"
          android:layout_marginTop="38dp"
          android:text="@string/others"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="97dp"
          android:layout_height="87dp"
          android:contentDescription="@string/others"
          android:src="@drawable/other" />
  </LinearLayout>

  <Button
      android:id="@+id/button1"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/textView2"
      android:text="+" 
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:onClick="new_device"/>

</RelativeLayout>